force-app/main/default/objects/Boat_Reservation_Settings__mdt/Boat_Reservation_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Boat Reservation Setting</label>
    <pluralLabel>Boat Reservation Settings</pluralLabel>
</CustomObject>