force-app/main/default/objects/Boat_Reservation_Settings__mdt/fields/Default_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Default_Deposit_Amount__c</fullName>
    <description>The default deposit ( Required payment today ) in the Online Boat Reservation System</description>
    <label>Default Deposit Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>