force-app/main/default/objects/Boat_Reservation_Settings__mdt/fields/Default_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Interest_Rate__c</fullName>
    <description>The default interest rate used to calculate payments in the Online Boat Reservation System</description>
    <label>Default Interest Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>