force-app/main/default/objects/Boat_Reservation_Settings__mdt/fields/Default_Term__c.field-meta.xml
<CustomField>
    <fullName>Default_Term__c</fullName>
    <description>The default Term in the Online Boat Reservation System</description>
    <label>Default Term</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>